--- a/MyGameSDL2/MyGameSDL2.vcxproj
+++ b/MyGameSDL2/MyGameSDL2.vcxproj
@@ -139,6 +139,7 @@
     <ClCompile Include="src\GameObject.cpp" />
     <ClCompile Include="src\Map.cpp" />
     <ClCompile Include="src\Player.cpp" />
+    <ClCompile Include="src\Timer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\LabGameLib\Lib\Include\BanGame.h" />
@@ -148,6 +149,7 @@
     <ClInclude Include="include\GameObject.h" />
     <ClInclude Include="include\Map.h" />
     <ClInclude Include="include\Player.h" />
+    <ClInclude Include="include\Timer.h" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="assets\images\map\bg1.png" />
