--- a/MyGameSDL2/MyGameSDL2.vcxproj
+++ b/MyGameSDL2/MyGameSDL2.vcxproj
@@ -109,11 +109,13 @@
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp20</LanguageStandard>
+      <AdditionalIncludeDirectories>D:\User\CodeBasic\VanEngine\MyGameSDL2\MyGameSDL2\include;D:\User\CodeBasic\VanEngine\MyGameSDL2\LabGameLib\Lib\Include;D:\User\CodeBasic\VanEngine\MyGameSDL2\LabGameLib;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalDependencies>GameEngine.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>D:\User\CodeBasic\VanEngine\MyGameSDL2\LabGameLib\Lib\Debug;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
